--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>Our Team</title>
 </head>
 <body>
-    
+    <div class="all_content">
+        <div class="container">
+            
+        </div>
+    </div>
+    <!-- /.all_content -->
     <script src="./main.js"></script>
 </body>
 </html>
