--- a/index.html
+++ b/index.html
@@ -10,8 +10,19 @@
 <body>
     <div class="all_content">
         <div class="container">
-            
+
         </div>
+
+        <form>
+            <h3>Add new member</h3>
+            <label for="name">Name</label>
+            <input type="text" id="name">
+            <label for="role">Role</label>
+            <input type="text" id="role">
+            <label for="img">Img</label>
+            <input type="url" name="img_url" id="url">
+            <button type="button">Add</button>
+        </form>
     </div>
     <!-- /.all_content -->
     <script src="./main.js"></script>
