con il form aggiungere altri oggetti al array

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <label for="role">Role</label>
             <input type="text" id="role">
             <label for="img">Img</label>
-            <input type="url" name="img_url" id="url">
-            <button type="button">Add</button>
+            <input type="url" name="img_url" id="img">
+            <button type="button" id="button">Add</button>
         </form>
     </div>
     <!-- /.all_content -->
