cambiato nome ad una variabile

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <input type="text" id="name">
             <label for="role">Role</label>
             <input type="text" id="role">
-            <label for="img">Img</label>
-            <input type="url" name="img_url" id="img">
+            <label for="url">Img</label>
+            <input type="url" name="img_url" id="url">
             <button type="button" id="button">Add</button>
         </form>
     </div>
